feat: add cloudfunction root

--- a/project.config.json
+++ b/project.config.json
@@ -9,5 +9,6 @@
   "compileType": "miniprogram",
   "appid": "touristappid",
   "projectname": "wepy-tcb-demo",
-  "miniprogramRoot": "./dist"
+  "miniprogramRoot": "./dist",
+  "cloudfunctionRoot" :"./cloudfunctions"
 }
